--- a/src/style/pages/sobre.module.css
+++ b/src/style/pages/sobre.module.css
@@ -3,18 +3,16 @@
     flex-direction: row;
     align-items: center;
     text-align: center;
-    /* margin-bottom: 1rem; */
     background-color: var(--background);
     padding-bottom: 2rem;
     padding-top: 2.3rem;
     color: var(--dark-green);
 }
 
-.values {
-    /* width: 95%; */
-    margin-top: 1rem;
-    border-radius: 8px;
 
+/* VALUE */
+.values {
+    margin-top: 1rem;
 }
 
 .valuesTitle {
@@ -41,7 +39,10 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 1rem;
     background-color: var(--dark-green);
+    /* line-height: 1.3rem; */
 }
+
+
 
 .valuesText:hover {
     color: var(--medium-green);
@@ -53,20 +54,23 @@ ul {
     list-style: none;
 }
 
+
+
+/* FOCUS */
+
 .containerFocus {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-bottom: 1rem;
-    background-color: var(--light-green);
-    padding-bottom: 2rem;
+    background-color: var(--dark-green);
+    padding-bottom: 2.3rem;
     padding-top: 2.3rem;
     color: var(--dark-green);
 }
 
 .titleFocus {
-    color: var(--brown);
+    color: var(--off-white);
     padding-bottom: 2rem;
     text-align: center;
     font-family: 'Titan One', cursive;
@@ -78,20 +82,74 @@ ul {
     display: inline-block;
     column-count: 2;
     column-gap: 5rem;
-
+    background-color: var(--light-green);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.739);
+    border-radius: 10px;
 }
 
 .focusTextList {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
     padding: 1rem;
-    /* height: 8rem; */
-    margin-bottom: 1rem;
-    border-radius: 10px;
+}
 
+
+.focusTextList>p>b {
+    margin-top: 1rem;
+    display: inline-block;
+}
+
+
+/* PROJETOS */
+
+.projects {
+    padding-top: 1rem;
+    background-color: var(--background);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 2.3rem;
+    padding-top: 2.3rem;
+}
+
+.projectsTitle>h3 {
+    color: var(--brown);
+    font-family: 'Titan One', cursive;
+    font-size: 2.2rem;
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
+.projectsContainer {
+    width: 60%;
+    display: inline-block;
+    column-count: 2;
+    column-gap: 5rem;
+    border-radius: 10px;
+}
+
+.projectsCard {
+    color: var(--off-white);
+    padding: 1rem;
+    border-radius: 10px;
+    text-align: center;
+    background-color: var(-);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.438);
+    margin-bottom: 1rem;
+    background-color: var(--dark-green);
 
 }
 
-.focusCard>ul>li {
-    color: var(--dark-green);
-    background-color: var(--background);
+.projectsTitle {
+    
+    display: inline-block;
+    /* align-items: center; */
+    text-align: center;
+}
+
+.projectsImage {
+    margin-top: 1rem;
+    border-radius: 10px;
+    max-width: 80%;
 }
