--- a/src/style/pages/contato.module.css
+++ b/src/style/pages/contato.module.css
@@ -1,44 +1,101 @@
-.formContainer {
-    background-color: var(--dark);
-}
-
-.form {
-    height: 50rem;
-    width: 80%;
+.contactContainer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center; 
-  
+}
+
+.contactCard {
+    display: inline-block;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    padding: 2rem;
+    border-radius: 8px;
+    background-color: var(--background);
+}
+
+.contactTitle {
+    color: var(--brown);
+    font-family: 'Titan One', cursive;
+    font-size: 2.2rem;
+    margin-bottom: 1.5rem;
+}
+
+.contactText {
+    width: 72%;
+    display: inline-block;
+    color: var(--dark-green);
+    margin-bottom: 1rem;
+}
+
+.formContainer {
+    display: inline-block;
+    width: 70%;
+    margin-left: 2rem;
+}
+
+.formCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .formInput {
-    width: 60%;
-    padding: .6rem 2rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    background-color: var(--light-green);
+    width: 100%;
+    padding: 0.7rem;
     margin-bottom: 1rem;
-    resize: vertical;
-    background-color: var(--grey);
+    border: 1px solid var(--medium-green);
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.217);
+
+    &:focus {
+        outline: none;
+        border-color: var(--medium-green);
+    }
+}
+
+.formInput::placeholder {
+    color: var(--dark-green);
 }
 
 .formButton {
-    width: 60%;
-    padding: .6rem 2rem;
-    background-color: green;
+    background-color: var(--dark-green);
     color: white;
-    margin-top: 1rem;
-    font-size: 1rem;
-    border-radius: 4px;
+    border: none;
+    padding: 0.8rem 1.2rem;
+    border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.2s ease;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.217);
 }
 
+.formButton:active {
 
-.formButton:hover {
-    background-color: #4ca;
+    background-color: var(--medium-green);
 }
 
-::placeholder {
-    color: var(--light);
+.infoContact {
+    padding-top: 4rem;
+    padding-bottom: 6rem;
+    text-align: center;
+    background-color: var(--light-green);
 }
 
+.usContactCard {
+    display: inline-block;
+    background-color: var(--fifth);
+    color: var(--dark-green);
+    border-radius: 8px;
+
+}
+
+.usContactCard>p {
+    color: var(--dark-blue);
+}
+
+.usTitle {
+    color: var(--dark-blue);
+    font-family: 'Titan One', cursive;
+    /* font-size: 1.8rem; */
+    margin-bottom: 1.5rem;
+}
