--- a/src/style/components/header.module.css
+++ b/src/style/components/header.module.css
@@ -31,6 +31,8 @@
         @media (max-width: 768px) {
             padding: 1rem;
             text-align: center;
+            display: flex;
+            flex-direction: column-reverse;
         }
     }
 
@@ -41,7 +43,7 @@
     }
 
     .headerImage {
-        display: none;
+        /* display: none; */
     }
 
     .headerText {
