--- a/src/style/components/menu.module.css
+++ b/src/style/components/menu.module.css
@@ -47,8 +47,10 @@
     }
 
     .navItens {
+        font-size: .8rem;
+        /* display: inline-block;
         flex-direction: row;
-        justify-content: center;
+        justify-content: center; */
 
     }
 
