--- a/src/style/components/footer.module.css
+++ b/src/style/components/footer.module.css
@@ -1,12 +1,12 @@
 .footerContainer {
-    background-color: var(--background);
+    background-color: var(--off-white);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 3rem;
     bottom: 0;
     position: relative;
-
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.253);
 }
 
 .footerContent {
