--- a/src/global.css
+++ b/src/global.css
@@ -26,5 +26,23 @@
 
 html {
   scroll-behavior: smooth;
-  /* scroll-padding-bottom: 98px; */
+}
+
+/* SCROLLBAR */
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #578f6b41;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #578f6b7e;
 }
