--- a/src/style/components/header.module.css
+++ b/src/style/components/header.module.css
@@ -39,12 +39,13 @@
     .headerTitle {
         @media (max-width: 768px) {
             font-size: 1.5rem;
+            font-family: 'Montserrat', sans-serif;
         }
     }
-
+/* 
     .headerImage {
-        /* display: none; */
-    }
+        display: none;
+    } */
 
     .headerText {
         @media (max-width: 768px) {
