--- a/src/style/components/menu.module.css
+++ b/src/style/components/menu.module.css
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--background);
+    background-color: var(--off-white);
     max-height: 100px;
     font-size: 1.1rem;
-
+    box-shadow: 1px 2px 5px rgb(0, 0, 0);
 }
 
 .navItens {
@@ -23,9 +23,6 @@
 
 .logo {
     width: 25%;
-    /* margin-top: .3rem;
-    margin-right: 1em;
-    margin-left: .5em; */
 }
 
 .navItens>li>a:hover {
@@ -43,22 +40,14 @@
         justify-content: space-between;
         padding: 1rem;
         max-height: unset;
-
     }
 
     .navItens {
         font-size: .8rem;
-        /* display: inline-block;
-        flex-direction: row;
-        justify-content: center; */
-
     }
 
     .logo {
         display: none;
-        width: 50%;
-        margin-bottom: 1rem;
-
     }
 
     .navItens>li>a:hover {
