--- a/src/style/pages/home.module.css
+++ b/src/style/pages/home.module.css
@@ -121,6 +121,7 @@
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
     padding: 0.5rem;
+    font-family: 'Montserrat', sans-serif;
   }
 
   .cardHome {
